chrome extension completed

--- a/popup/popup.css
+++ b/popup/popup.css
@@ -2,7 +2,7 @@ body {
     margin: 0px;
     padding: 0px;
     box-sizing: border-box;
-
+    background-color: white;
     .container {
         width: 450px;
         height: 550px;
@@ -19,7 +19,7 @@ body {
         gap: 1.2rem;
         /* border: 4px solid dodgerblue; */
         padding: 1rem;
-
+        /* background-color: ; */
     }
 
     .status_title {
@@ -27,13 +27,14 @@ body {
     }
 
     .status_content {
-        background-color: darkslateblue;
+        background-color: black;
         padding: 0.51rem 1rem;
         color: white;
         font-weight: 600;
         text-transform: capitalize;
         border-radius: 8px;
         cursor: pointer;
+        width: fit-content;        
     }
 
     .filedContainer {
@@ -58,7 +59,7 @@ body {
     /* border: 2px solid red; */
 }
 button {
-    background-color: darkslateblue;
+    background-color: black;
     padding: 0.91rem 1rem;
     color: white;
     font-weight: 200;
@@ -66,7 +67,7 @@ button {
     border-radius: 8px;
     cursor: pointer;
     letter-spacing: 2px;
-    box-shadow: 4px 4px 8px rgb(68,68,68);
+    box-shadow: 4px 4px 5px rgb(68,68,68);
 }
 .base {
     font-size: large;
@@ -82,7 +83,8 @@ input {
 }
 
 .is-success:hover{
-    background-color: rgb(107, 179, 107);
+    background-color: rgb(38, 38, 38);
+    /* opacity: 0.9; */
 }
 
 #locationId {
